RESOLVED FIXED305347
Clients may hang under WebExtensionContext::fireStorageChangedEventIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=305347
Summary Clients may hang under WebExtensionContext::fireStorageChangedEventIfNeeded
Kiara Rose
Reported 2026-01-12 15:48:49 PST
Attachments
Kiara Rose
Comment 1 2026-01-12 17:03:59 PST
EWS
Comment 2 2026-01-15 09:12:59 PST
Committed 305647@main (7f40ad59f443): <https://commits.webkit.org/305647@main> Reviewed commits have been landed. Closing PR #56467 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.