Cherry-pick 7f40ad59f443. rdar://168364819

Clients may hang under WebExtensionContext::fireStorageChangedEventIfNeeded
    https://bugs.webkit.org/show_bug.cgi?id=305347
    rdar://167780475

    Reviewed by Brian Weinstein and Timothy Hatcher.

    Clients may hang while we attempt to parse a lot of extension storage data at once via JSON::Value::parseJSON.
    This work doesn't need to be done on the main thread so dispatch to a background thread instead.

    * Source/WebKit/UIProcess/Extensions/API/WebExtensionContextAPIStorage.cpp:
    (WebKit::extensionStorageQueue):
    (WebKit::WebExtensionContext::fireStorageChangedEventIfNeeded):

    Canonical link: https://commits.webkit.org/305647@main

Identifier: 305413.66@safari-7624-branch